# seguro

./: CLAUDE.md  Cargo.toml  README.md
.complex/: agents.json  events.jsonl  graph.json
.complex/archive/: 0oQW.md  2QAB.5PfE.md  2QAB.AHrf.md  2QAB.GCvU.md  2QAB.JRAu.md  2QAB.md  2QAB.rJol.md  2QAB.wwoN.md  B7at.md  Lq6u.5A3P.md  Lq6u.LPha.md  Lq6u.Qdul.md  Lq6u.UY1U.md  Lq6u.lpzr.md  Lq6u.md  Lq6u.pJ3m.md  Lq6u.qJX8.md  Lq6u.wV5e.md  Lq6u.xSDv.md  Lq6u.yX1j.md  Ppjo.md  QMjh.NEcH.md  archive.jsonl  gAMb.md  vWsL.Ltud.md  vWsL.md  vWsL.nPY8.md  vWsL.qeOH.md  vWsL.vqyv.md  y4nF.md  zGGV.3fPA.md  zGGV.J1Qg.md
.complex/issues/: 0aWW.md  2QAB.5PfE.md  2QAB.GCvU.md  2QAB.JRAu.md  2QAB.wwoN.md  49uv.md  82Xd.md  9xuC.comments.json  9xuC.md  EEWb.md  F4LD.md  JmeV.md  Lq6u.QyyE.md  Lq6u.aKE3.md  Lq6u.akzu.md  Lq6u.h723.md  Lq6u.rJKj.md  Lq6u.xgYB.md  QMjh.md  QpKy.md  RMcr.md  Uvke.md  VukS.md  YhJD.md  ZRAq.md  d2GO.md  qHBF.md  vWsL.8KjF.md  vWsL.8gR8.md  vWsL.YKNn.md  vWsL.vqyv.md  zGGV.3fPA.md  zGGV.JP03.md  zGGV.Kirv.md  zGGV.TLLu.md  zGGV.Xzlm.md  zGGV.dIhf.md
.complex/nodes/: 49uv.json  82Xd.json  9xuC.json  EEWb.3e7H.json  EEWb.QqLG.json  EEWb.cndZ.json  EEWb.fHa0.json  EEWb.json  EEWb.qBvh.json  EEWb.s6uQ.json  F4LD.json  JmeV.json  Lq6u.h723.json  QpKy.json  RMcr.json  Uvke.json  VukS.json  d2GO.b4b4.json  d2GO.json  d2GO.w3Mb.json  d2GO.w7pN.json  d2GO.xW88.json  qHBF.json
demo/: 01-sandbox-identity.sh  02-file-sharing.sh  03-network-isolation.sh  04-session-timeout.sh
docs/prd/: README.md  api-usage-capture.md
scripts/: build-image.sh
src/: api.rs  cli.rs  config.rs  lib.rs  main.rs
src/commands/: api_usage.rs  images.rs  mod.rs  proxy_log.rs  run.rs  sessions.rs  shell.rs  snapshot.rs
src/proxy/: ai_usage.rs  ca.rs  filter.rs  log.rs  mod.rs
src/session/: image.rs  keys.rs  mod.rs  ports.rs
src/vm/: cidata.rs  fw_cfg.rs  mod.rs  virtiofsd.rs
tests/: acceptance.rs  ai_usage_integration.rs  proxy_integration.rs
