[package]
name = "seguro"
version = "0.1.0"
edition = "2021"
description = "Sandbox CLI coding agents inside a QEMU VM"

[[bin]]
name = "seguro"
path = "src/main.rs"

[dependencies]
clap              = { version = "4", features = ["derive"] }
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
toml              = "0.8"
color-eyre        = "0.6"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hudsucker         = "0.3"
rcgen             = "0.13"
rustls            = "0.23"
hyper             = { version = "1", features = ["full"] }
ed25519-dalek     = { version = "2", features = ["rand_core"] }
ssh-key           = { version = "0.6", features = ["ed25519"] }
uuid              = { version = "1", features = ["v4"] }
dirs              = "5"
nix               = { version = "0.29", features = ["process", "signal"] }
rand              = "0.8"
serde_json        = "1"
