[package]
name = "seguro"
version = "0.1.0"
edition = "2021"
description = "Sandbox CLI coding agents inside a QEMU VM"

[[bin]]
name = "seguro"
path = "src/main.rs"

[lib]
name = "seguro"
path = "src/lib.rs"

[dependencies]
clap              = { version = "4", features = ["derive"] }
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
toml              = "0.8"
color-eyre        = "0.6"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hudsucker         = "0.3"
rcgen             = "0.13"
rustls            = "0.23"
hyper             = { version = "1", features = ["full"] }
ed25519-dalek     = { version = "2", features = ["rand_core"] }
ssh-key           = { version = "0.6", features = ["ed25519"] }
uuid              = { version = "1", features = ["v4"] }
dirs              = "5"
nix               = { version = "0.29", features = ["process", "signal", "term", "user"] }
rand              = "0.8"
serde_json        = "1"
hyper-util        = { version = "0.1", features = ["client-legacy", "server-auto", "http1", "http2", "tokio"] }
http-body-util    = "0.1"
tokio-rustls      = "0.26"
dashmap           = "6"
fatfs             = "0.3"
webpki-roots      = "0.26"

[dev-dependencies]
tempfile = "3"
dirs     = "5"
